examples/team1/schemas/api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: team1
spec:
  selector:
    role: api
  type: LoadBalancer
  ports:
  - name: endpoint
    port: 80
    targetPort: http
